--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,12 @@
-<h1>Hello, I am the HomePage!!!</h1>
+<div id="intro-text-container">
+  <h1>Hello!</h1>
+  <h3>Thanks for checking out my boilerplate Socket.io App w/ Express.</h3>
+  <p>Currently there is one
+    <strong>fully functional</strong>
+    chatroom, more to come!</p>
+  <p>Let me know if you have any questions!</p>
+
+  <h4>🚨⚠️🚧Currently Under Construction!🚧⚠️🚨</h4>
+  <p>If you have any suggestions for future developments or would like to
+    contribute in anyway (always appreciated) please let me know!!</p>
+</div>
