--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,5 +3,6 @@
   <ul>
     <a href="/"><li>Home</li></a>
     <a href="/chatroom"><li>Chatroom</li></a>
+    <a href="/moderated"><li>Moderated</li></a>
   </ul>
 </nav>
