seperated chat rooms, moderated and unfiltered chats, profanity filter on moderated chat

--- a/views/moderated-chatroom.handlebars
+++ b/views/moderated-chatroom.handlebars
@@ -1,3 +1,10 @@
-<h1>This Chat room is moderated!</h1>
 
-{{> chatbox}}
+<aside></aside>
+<main id="main">
+   <h3>Welcome<span id="name"></span>, this chat is moderated!</h3>
+   <p>Messages will be filtered for the following reasons: Hate, Hate/Threatening, Self-harm, Sexual Content, Sexual/Minors, Violence, and Violence/Graphic.</p>
+   <p>Chat is Moderated by <a href="https://openai.com/"><b>OpenAI</b></a> & <a href="https://rapidapi.com/community/api/purgomalum-1"><b>PurgoMalum</b></a></p>
+    {{> chatbox}}
+</main>
+
+<script src="js/moderated.js"></script>
