--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -1,6 +1,6 @@
 <aside></aside>
 <main id="main">
-  <h3>Welcome<span id="name"></span>!</h3>
+  <h3>Welcome<span id="name"></span>,this chat is unfiltered and has no moderation!</h3>
 
   {{> chatbox}}
 </main>
