--- a/views/moderated-chatroom.handlebars
+++ b/views/moderated-chatroom.handlebars
@@ -3,6 +3,7 @@
 <main id="main">
    <h3>Welcome<span id="name"></span>, this chat is moderated!</h3>
    <p>Messages will be filtered for the following reasons: Hate, Hate/Threatening, Self-harm, Sexual Content, Sexual/Minors, Violence, and Violence/Graphic.</p>
+   <p>Profanity and explicit language will also be censored!</p>
    <p>Chat is Moderated by <a href="https://openai.com/"><b>OpenAI</b></a> & <a href="https://rapidapi.com/community/api/purgomalum-1"><b>PurgoMalum</b></a></p>
     {{> chatbox}}
 </main>
